--- a/src/app/modules/auth/login-seller/login-seller.component.html
+++ b/src/app/modules/auth/login-seller/login-seller.component.html
@@ -2,29 +2,29 @@
 
     <form class="col-md-6 col-sm-12 w3-animate-zoom"
         [formGroup]="loginSellerForm" (ngSubmit)="onLogin()">
-        <h2>{{ loginAs }}</h2>
+        <h2>{{ 'login.loginSeller' | translate }}</h2>
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your username</mat-label>
+            <mat-label>{{'login.enterUserOrEmail' | translate}}</mat-label>
             <input matInput formControlName="username" type="text">
             <mat-error *ngIf="loginSellerForm.controls['username'].invalid">
-                Please enter a valid username or email ID</mat-error>
+                {{'login.validUserOrEmail' | translate}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your password</mat-label>
+            <mat-label>{{'login.enterPassword' | translate}}</mat-label>
             <input matInput formControlName="password" type="password">
             <mat-error *ngIf="loginSellerForm.controls['password'].invalid">
-                Please enter a valid password</mat-error>
+                {{'login.validPassword' | translate}}</mat-error>
         </mat-form-field>
 
         <div class="btns">
             <button mat-button class="btn btn-primary"
                 [disabled]="loginSellerForm.invalid"
-                type="submit">Login</button>
+                type="submit">{{'login.login' | translate}}</button>
             <button mat-button class="btn btn-default" type="reset"
-                (click)="onCancel()">Cancel</button>
+                (click)="onCancel()">{{'common.cancel' | translate}}</button>
         </div>
 
     </form>
