--- a/src/app/modules/auth/register-booth/register-booth.component.html
+++ b/src/app/modules/auth/register-booth/register-booth.component.html
@@ -2,53 +2,53 @@
 
     <form class="col-md-6 col-sm-12 w3-animate-zoom"
         [formGroup]="registerBoothForm" (ngSubmit)="onRegister()">
-        <h2>{{ registerAs }}</h2>
+        <h2>{{ 'register.booth' | translate }}</h2>
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your name</mat-label>
+            <mat-label>{{'register.enterName' | translate}}</mat-label>
             <input matInput formControlName="name" type="text">
             <mat-error *ngIf="registerBoothForm.controls['name'].invalid">
-                Name is required</mat-error>
+                {{'register.nameReq' | translate}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your booth name</mat-label>
+            <mat-label>{{'register.enterBooth' | translate}}</mat-label>
             <input matInput formControlName="boothName" type="text">
             <mat-error *ngIf="registerBoothForm.controls['boothName'].invalid">
-                Booth name is required</mat-error>
+                {{'register.boothNameReq' | translate}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your mobile number</mat-label>
+            <mat-label>{{'register.enterMobile' | translate}}</mat-label>
             <input matInput formControlName="phone" type="text">
             <mat-error *ngIf="registerBoothForm.controls['phone'].invalid">
-                Please enter a valid mobile number</mat-error>
+                {{'register.validMobile' | translate}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your email ID</mat-label>
+            <mat-label>{{'register.enterEmail' | translate}}</mat-label>
             <input matInput formControlName="email" type="email">
             <mat-error *ngIf="registerBoothForm.controls['phone'].invalid">
-                Please enter a valid email ID</mat-error>
+                {{'register.validEmail' | translate}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
-            <mat-label>Enter your booth address</mat-label>
+            <mat-label>{{'register.enterBoothAddress' | translate}}</mat-label>
             <textarea matInput formControlName="address"></textarea>
             <mat-error *ngIf="registerBoothForm.controls['address'].invalid">
-                Booth address is required</mat-error>
+                {{'register.boothAddReq' | translate}}</mat-error>
         </mat-form-field>
 
         <div class="btns">
             <button mat-button class="btn btn-primary"
                 [disabled]="registerBoothForm.invalid"
-                type="submit">Register</button>
+                type="submit">{{'register.register' | translate}}</button>
             <button mat-button class="btn btn-default" type="reset"
-                (click)="onCancel()">Cancel</button>
+                (click)="onCancel()">{{'common.cancel' | translate}}</button>
         </div>
 
     </form>
