team page with i18n

--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="col-md-6 col-12">
         message form
     </div>
@@ -16,4 +16,111 @@
             Abhishek
         </div>
     </div>
+</div> -->
+
+
+<div class="container team">
+    <div class="row">
+        <div class="heading-title text-center">
+            <h3 class="text-uppercase">{{'team.ourProfessionals' | translate}}</h3>
+            <p class="p-top-30 half-txt">{{'team.slogan' | translate}}</p>
+        </div>
+
+        <div class="col-md-6 col-sm-6">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="../../../assets/images/utkarsh.JPG"
+                        alt="Utkarsh" class="img-responsive">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>{{'team.hi' | translate}}</h4>
+                        <p>{{'team.introDev' | translate}}</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>{{'team.utkarsh' | translate}}</h5>
+                <span>{{'team.utkarshRole' | translate}}</span>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="../../../assets/images/rohan.jpeg"
+                        alt="Rohan" class="img-responsive">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>{{'team.hi' | translate}}</h4>
+                        <p>{{'team.introDesigner' | translate}}</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>{{'team.rohan' | translate}}</h5>
+                <span>{{'team.rohanRole' | translate}}</span>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="../../../assets/images/shivam.jpeg"
+                        alt="Shivam" class="img-responsive">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>{{'team.hi' | translate}}</h4>
+                        <p>{{'team.introWeb' | translate}}</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>{{'team.shivam' | translate}}</h5>
+                <span>{{'team.shivamRole' | translate}}</span>
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <div class="team-member">
+                <div class="team-img">
+                    <img src="../../../assets//images/abhishek.jpeg"
+                        alt="Abhishek" class="img-responsive">
+                </div>
+                <div class="team-hover">
+                    <div class="desk">
+                        <h4>{{'team.hi' | translate}}</h4>
+                        <p>{{'team.introWeb' | translate}}</p>
+                    </div>
+                    <div class="s-link">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-title">
+                <h5>{{'team.abhishek' | translate}}</h5>
+                <span>{{'team.abhishekRole' | translate}}</span>
+            </div>
+        </div>
+
+    </div>
+
 </div>
+
+<hr>
