path changed for all img src

--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -14,7 +14,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img src="../../../assets/images/pocket.jpg" />
+                                <img src="./assets/images/pocket.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -31,7 +31,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img src="../../../assets/images/track.jpg" />
+                                <img src="./assets/images/track.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -49,7 +49,7 @@
                         <div class="wd-30">
                             <div class="img-holder">
                                 <img
-                                    src="../../../assets/images/fertilizers.jpg" />
+                                    src="./assets/images/fertilizers.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -69,7 +69,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img src="../../../assets/images/experts.jpg" />
+                                <img src="./assets/images/experts.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -87,7 +87,7 @@
                         <div class="wd-30">
                             <div class="img-holder">
                                 <img
-                                    src="../../../assets/images/forecasts.jpg" />
+                                    src="./assets/images/forecasts.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -105,7 +105,7 @@
                         <div class="wd-30">
                             <div class="img-holder">
                                 <img
-                                    src="../../../assets/images/cashless.jpg" />
+                                    src="./assets/images/cashless.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
