--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -29,7 +29,7 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="../../../assets/images/utkarsh.JPG"
+                    <img src="./assets/images/utkarsh.JPG"
                         alt="Utkarsh" class="img-responsive">
                 </div>
                 <div class="team-hover">
@@ -52,7 +52,7 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="../../../assets/images/rohan.jpeg"
+                    <img src="./assets/images/rohan.jpeg"
                         alt="Rohan" class="img-responsive">
                 </div>
                 <div class="team-hover">
@@ -75,7 +75,7 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="../../../assets/images/shivam.jpeg"
+                    <img src="./assets/images/shivam.jpeg"
                         alt="Shivam" class="img-responsive">
                 </div>
                 <div class="team-hover">
@@ -98,7 +98,7 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="../../../assets//images/abhishek.jpeg"
+                    <img src="./assets//images/abhishek.jpeg"
                         alt="Abhishek" class="img-responsive">
                 </div>
                 <div class="team-hover">
