--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -32,7 +32,7 @@
             </div>
             <div class="col-md-5 col-sm-6 w3-animate-left">
                 <div class="about-img">
-                    <img src="../../../assets/images/about.jpg" alt="About us"
+                    <img src="./assets/images/about.jpg" alt="About us"
                         style="width: 100%; height: auto;">
                 </div>
             </div>
