--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="../assets/images/farmer3.jpg" alt="First slide">
+                    <img src="./assets/images/farmer3.jpg" alt="First slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -32,7 +32,7 @@
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer1.jpg" alt="Second slide">
+                    <img src="./assets/images/farmer1.jpg" alt="Second slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -47,7 +47,7 @@
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer2.jpg" alt="Third slide">
+                    <img src="./assets/images/farmer2.jpg" alt="Third slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer4.jpg" alt="Fourth slide">
+                    <img src="./assets/images/farmer4.jpg" alt="Fourth slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
