--- a/src/app/shared/components/error-dialog/error-dialog.component.html
+++ b/src/app/shared/components/error-dialog/error-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="mat-dialog-style">
     <div class="error-modal-icon">
-        <img src="assets/images/error.svg" alt="Error">
+        <img src="./assets/images/error.svg" alt="Error">
     </div>
     <div class="content-style" mat-dialog-content>
         <div class="error-content">
