--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -62,6 +62,6 @@
         </div>
     </div>
     <div class="foot-right">
-        <img src="../../../../assets/images/web-icon.ico" height="100px">
+        <img src="./assets/images/web-icon.ico" height="100px">
     </div>
 </div>
