--- a/src/app/shared/components/success-dialog/success-dialog.component.html
+++ b/src/app/shared/components/success-dialog/success-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="mat-dialog-style">
     <div class="error-modal-icon">
-        <img src="assets/images/success.png" alt="Success">
+        <img src="./assets/images/success.png" alt="Success">
     </div>
     <div class="content-style" mat-dialog-content>
         <div class="error-content">
