team role changed and links to social added

--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -22,25 +22,27 @@
 <div class="container team">
     <div class="row">
         <div class="heading-title text-center">
-            <h3 class="text-uppercase">{{'team.ourProfessionals' | translate}}</h3>
+            <h3 class="text-uppercase">{{'team.ourProfessionals' | translate}}
+            </h3>
             <p class="p-top-30 half-txt">{{'team.slogan' | translate}}</p>
         </div>
 
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="./assets/images/utkarsh.JPG"
-                        alt="Utkarsh" class="img-responsive">
+                    <img src="./assets/images/utkarsh.JPG" alt="Utkarsh"
+                        class="img-responsive">
                 </div>
                 <div class="team-hover">
                     <div class="desk">
                         <h4>{{'team.hi' | translate}}</h4>
-                        <p>{{'team.introDev' | translate}}</p>
+                        <p>{{'team.introUtkarsh' | translate}}</p>
                     </div>
                     <div class="s-link">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.instagram.com/utkarsh.utt"
+                            target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="mailto:utkarshutt2706@gmail.com"><i
+                                class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -52,18 +54,19 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="./assets/images/rohan.jpeg"
-                        alt="Rohan" class="img-responsive">
+                    <img src="./assets/images/rohan.jpeg" alt="Rohan"
+                        class="img-responsive">
                 </div>
                 <div class="team-hover">
                     <div class="desk">
                         <h4>{{'team.hi' | translate}}</h4>
-                        <p>{{'team.introDesigner' | translate}}</p>
+                        <p>{{'team.introRohan' | translate}}</p>
                     </div>
                     <div class="s-link">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.facebook.com/rohan.dwivedi.39"
+                            target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="mailto:rohanrko97@gmail.com"><i
+                                class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -75,18 +78,19 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="./assets/images/shivam.jpeg"
-                        alt="Shivam" class="img-responsive">
+                    <img src="./assets/images/shivam.jpeg" alt="Shivam"
+                        class="img-responsive">
                 </div>
                 <div class="team-hover">
                     <div class="desk">
                         <h4>{{'team.hi' | translate}}</h4>
-                        <p>{{'team.introWeb' | translate}}</p>
+                        <p>{{'team.introShivam' | translate}}</p>
                     </div>
                     <div class="s-link">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.facebook.com/shivam.rajput.5811"
+                            target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="mailto:raj.shivamraj10@gmail.com"><i
+                                class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
             </div>
@@ -98,18 +102,19 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="./assets//images/abhishek.jpeg"
-                        alt="Abhishek" class="img-responsive">
+                    <img src="./assets//images/abhishek.jpeg" alt="Abhishek"
+                        class="img-responsive">
                 </div>
                 <div class="team-hover">
                     <div class="desk">
                         <h4>{{'team.hi' | translate}}</h4>
-                        <p>{{'team.introWeb' | translate}}</p>
+                        <p>{{'team.introAbhishek' | translate}}</p>
                     </div>
                     <div class="s-link">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="https://www.facebook.com/people/Abhishek-Singh/100005251937395"
+                            target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="mailto:as1998786@gmail.com"><i
+                                class="fa fa-google-plus"></i></a>
                     </div>
                 </div>
             </div>
