--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -29,7 +29,7 @@
 <div class="footer">
     <div class="foot-left">
         <div class="follow">
-            FOLLOW US
+            {{'footer.follow' | translate}}
         </div>
         <div class="about-icons">
             <ul>
