--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -42,7 +42,7 @@
                 <li> <a href="https://plus.google.com/"><i id="social-gp"
                             class="fa fa-google-plus-square fa-3x social"></i></a>
                 </li>
-                <li> <a href="mailto:bootsnipp@gmail.com"><i id="social-em"
+                <li> <a href="mailto:utkarsh.srivastava@unthinkable.co"><i id="social-em"
                             class="fa fa-envelope-square fa-3x social"></i></a>
                 </li>
             </ul>
