intendation corrected and modal component removed

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,8 @@
                             <br>
                             <div class="">
                                 <a [routerLink]="['/kisan/login']"
-                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a>
+                            </div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
@@ -42,7 +43,8 @@
                             <br>
                             <div class="">
                                 <a [routerLink]="['/kisan/login']"
-                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a>
+                            </div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
@@ -57,7 +59,8 @@
                             <br>
                             <div class="">
                                 <a [routerLink]="['/kisan/login']"
-                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a>
+                            </div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
@@ -72,8 +75,8 @@
                             <br>
                             <div class="">
                                 <a [routerLink]="['/kisan/login']"
-                                    class="btn btn-theme btn-sm btn-min-block">Get
-                                    Started</a></div>
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a>
+                            </div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
