--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,27 +1,3 @@
-<!-- <div class="wrapper footer page-footer font-small purple pt-4 fixed-bottom">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text">
-                Kisan Sewa
-            </div>
-            <div class="col-12 text">
-                A project by final year students.
-            </div>
-            <div class="col-12 col-md-3 name">
-                Utkarsh Srivastava
-            </div>
-            <div class="col-12 col-md-3 name">
-                Rohan Dwivedi
-            </div>
-            <div class="col-12 col-md-3 name">
-                Shivam Rajput
-            </div>
-            <div class="col-12 col-md-3 name">
-                Abhishek Singh
-            </div>
-        </div>
-    </div>
-</div> -->
 <div class="lang" *ngIf="currentLang=='hi'"><a (click)="onLanguageChoose('en')">
         Click to view in English</a></div>
 <div class="lang" *ngIf="currentLang=='en'"><a (click)="onLanguageChoose('hi')">
@@ -42,7 +18,8 @@
                 <li> <a href="https://plus.google.com/"><i id="social-gp"
                             class="fa fa-google-plus-square fa-3x social"></i></a>
                 </li>
-                <li> <a href="mailto:utkarsh.srivastava@unthinkable.co"><i id="social-em"
+                <li> <a href="mailto:utkarsh.srivastava@unthinkable.co"><i
+                            id="social-em"
                             class="fa fa-envelope-square fa-3x social"></i></a>
                 </li>
             </ul>
