--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -48,8 +48,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img
-                                    src="./assets/images/fertilizers.jpg" />
+                                <img src="./assets/images/fertilizers.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -86,8 +85,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img
-                                    src="./assets/images/forecasts.jpg" />
+                                <img src="./assets/images/forecasts.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
@@ -104,8 +102,7 @@
                     <a class="indiv-item-list event-elem">
                         <div class="wd-30">
                             <div class="img-holder">
-                                <img
-                                    src="./assets/images/cashless.jpg" />
+                                <img src="./assets/images/cashless.jpg" />
                             </div>
                         </div>
                         <div class="wd-70">
