--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -81,7 +81,7 @@
         <div class="col-md-6 col-sm-6">
             <div class="team-member">
                 <div class="team-img">
-                    <img src="./assets//images/abhishek.jpeg" alt="Abhishek"
+                    <img src="./assets/images/abhishek.jpeg" alt="Abhishek"
                         class="img-responsive">
                 </div>
                 <div class="team-hover">
