--- a/src/app/modules/auth/register-booth/register-booth.component.html
+++ b/src/app/modules/auth/register-booth/register-booth.component.html
@@ -6,7 +6,8 @@
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
             <mat-label>{{'register.enterName' | translate}}</mat-label>
-            <input matInput formControlName="name" type="text">
+            <input matInput formControlName="name" type="text"
+                autocomplete="name">
             <mat-error *ngIf="registerBoothForm.controls['name'].invalid">
                 {{'register.nameReq' | translate}}</mat-error>
         </mat-form-field>
@@ -14,7 +15,8 @@
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
             <mat-label>{{'register.enterBooth' | translate}}</mat-label>
-            <input matInput formControlName="boothName" type="text">
+            <input matInput formControlName="boothName" type="text"
+                autocomplete="additional-name">
             <mat-error *ngIf="registerBoothForm.controls['boothName'].invalid">
                 {{'register.boothNameReq' | translate}}</mat-error>
         </mat-form-field>
@@ -22,7 +24,8 @@
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
             <mat-label>{{'register.enterMobile' | translate}}</mat-label>
-            <input matInput formControlName="phone" type="text" inputmode="numeric">
+            <input matInput formControlName="phone" type="text"
+                inputmode="numeric" autocomplete="mobile">
             <mat-error *ngIf="registerBoothForm.controls['phone'].invalid">
                 {{'register.validMobile' | translate}}</mat-error>
         </mat-form-field>
@@ -30,7 +33,8 @@
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
             <mat-label>{{'register.enterEmail' | translate}}</mat-label>
-            <input matInput formControlName="email" type="email">
+            <input matInput formControlName="email" type="email"
+                autocomplete="email" inputmode="email">
             <mat-error *ngIf="registerBoothForm.controls['phone'].invalid">
                 {{'register.validEmail' | translate}}</mat-error>
         </mat-form-field>
@@ -38,7 +42,8 @@
         <mat-form-field appearance="outline"
             class="mat-no-padding col-md-6 col-sm-12">
             <mat-label>{{'register.enterBoothAddress' | translate}}</mat-label>
-            <textarea matInput formControlName="address"></textarea>
+            <textarea matInput formControlName="address"
+                autocomplete="address-line3"></textarea>
             <mat-error *ngIf="registerBoothForm.controls['address'].invalid">
                 {{'register.boothAddReq' | translate}}</mat-error>
         </mat-form-field>
