--- a/src/app/modules/dashboard/farmer/farmer.component.scss
+++ b/src/app/modules/dashboard/farmer/farmer.component.scss
@@ -5,7 +5,7 @@
   margin: 30px 0px;
 }
 .accor-head {
-  background-color: #90caf9;
+  background-color: #90caf9 !important;
   transition: 0.5s;
 }
 .accor-head:hover {
