multiple accordion turned off

--- a/src/app/modules/dashboard/farmer/farmer.component.scss
+++ b/src/app/modules/dashboard/farmer/farmer.component.scss
@@ -8,6 +8,7 @@
   background-color: #90caf9 !important;
   transition: 0.5s;
 }
-.accor-head:hover {
+.accor-head:hover,
+.mat-expansion-panel-header.mat-expanded {
   background-color: #33a3ff !important;
 }
