--- a/src/app/modules/dashboard/farmer/farmer.component.html
+++ b/src/app/modules/dashboard/farmer/farmer.component.html
@@ -1,53 +1,36 @@
 <div class="container">
-    <div class="accor">
-        <mat-accordion>
-            <mat-expansion-panel>
-                <mat-expansion-panel-header class="accor-head">
-                    <mat-panel-title>
-                        {{'farmer.sellAgri' | translate}}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <app-sell></app-sell>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-    <div class="accor">
-        <mat-accordion>
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                (closed)="panelOpenState = false">
-                <mat-expansion-panel-header class="accor-head">
-                    <mat-panel-title>
-                        {{'farmer.rentMachines' | translate}}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <app-rent></app-rent>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-    <div class="accor">
-        <mat-accordion>
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                (closed)="panelOpenState = false">
-                <mat-expansion-panel-header class="accor-head">
-                    <mat-panel-title>
-                        {{'farmer.viewWeather' | translate}}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <app-weather></app-weather>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-    <div class="accor">
-        <mat-accordion>
-            <mat-expansion-panel (opened)="panelOpenState = true"
-                (closed)="panelOpenState = false">
-                <mat-expansion-panel-header class="accor-head">
-                    <mat-panel-title>
-                        {{'farmer.marketRate' | translate}}
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <app-market-rates></app-market-rates>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
+    <mat-accordion>
+        <mat-expansion-panel class="accor">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.sellAgri' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-sell></app-sell>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.rentMachines' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-rent></app-rent>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.viewWeather' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-weather></app-weather>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="accor">
+            <mat-expansion-panel-header class="accor-head">
+                <mat-panel-title>
+                    {{'farmer.marketRate' | translate}}
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-market-rates></app-market-rates>
+        </mat-expansion-panel>
+    </mat-accordion>
 </div>
