animation added to farmer comp

--- a/src/app/modules/dashboard/farmer/farmer.component.html
+++ b/src/app/modules/dashboard/farmer/farmer.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <mat-accordion>
-        <mat-expansion-panel class="accor">
+        <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
                     {{'farmer.sellAgri' | translate}}
@@ -8,7 +8,7 @@
             </mat-expansion-panel-header>
             <app-sell></app-sell>
         </mat-expansion-panel>
-        <mat-expansion-panel class="accor">
+        <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
                     {{'farmer.rentMachines' | translate}}
@@ -16,7 +16,7 @@
             </mat-expansion-panel-header>
             <app-rent></app-rent>
         </mat-expansion-panel>
-        <mat-expansion-panel class="accor">
+        <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
                     {{'farmer.viewWeather' | translate}}
@@ -24,7 +24,7 @@
             </mat-expansion-panel-header>
             <app-weather></app-weather>
         </mat-expansion-panel>
-        <mat-expansion-panel class="accor">
+        <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
                     {{'farmer.marketRate' | translate}}
